app/Helm/Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: e-corp.info
      http:
        paths:
        - path: /(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: application
              port:
                number: 5000
